--- a/index.html
+++ b/index.html
@@ -1,486 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oblivity | #1 Roblox External</title>
+    <title>Oblivity | Home</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        * {
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
+            color: #fff;
+        }
+
+        nav {
+            background-color: #161616;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
+
+        nav .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
         }
 
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #0b1e34, #1f364d);
-            color: #ddd;
-            line-height: 1.6;
-            overflow-x: hidden;
+        nav ul li {
+            margin: 0 15px;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #00aaff;
+        }
+
+        .header {
+            background: url('test.jpg') no-repeat center center/cover;
+            height: 60vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
             padding: 0 20px;
         }
 
-        header {
-            background: linear-gradient(to right, #0b1e34, #1f364d);
+        .header h1 {
+            font-size: 48px;
+            margin-bottom: 10px;
+        }
+
+        .header p {
+            font-size: 18px;
+        }
+
+        .header .buttons {
+            margin-top: 20px;
+        }
+
+        .header .buttons a {
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+            background-color: #007bff;
             color: #fff;
+            transition: background-color 0.3s;
+            display: inline-flex;
+            align-items: center;
+        }
+
+        .header .buttons a:hover {
+            background-color: #0056b3;
+        }
+
+        .header .buttons a i {
+            margin-right: 8px;
+        }
+
+        .about {
+            padding: 40px 20px;
             text-align: center;
-            padding: 80px 0;
-            position: relative;
-            z-index: 1;
-            backdrop-filter: blur(10px);
         }
 
-        header::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.4);
-            z-index: -1;
-        }
-
-        header h1 {
-            font-size: 3em;
+        .about h2 {
+            font-size: 36px;
             margin-bottom: 20px;
-            color: #fff;
-            text-transform: uppercase;
-            font-weight: bold;
-            letter-spacing: 2px;
         }
 
-        header p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
+        .about p {
+            font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto;
         }
 
         .login-button {
-            display: inline-block;
-            background-color: #007BFF;
-            color: #fff;
-            padding: 12px 24px;
+            padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            font-size: 1.1em;
-            text-decoration: none;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-color: #007bff;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s; 
+            display: inline-flex;
+            align-items: center;
         }
 
         .login-button i {
-            margin-right: 5px;
+            margin-right: 8px;
         }
 
         .login-button:hover {
             background-color: #0056b3;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            color: #fff; 
         }
 
-        nav {
-            background: linear-gradient(to right, #0b1e34, #1f364d);
-            color: #fff;
-            padding: 15px 0;
-            text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            transition: background-color 0.3s ease;
-            backdrop-filter: blur(10px);
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover {
-            background-color: #2c4d6d;
-        }
-
-        #services {
-            padding: 80px 0;
-            position: relative;
-            z-index: 1;
-            background: linear-gradient(to right, #1f364d, #304e6d);
-            border-radius: 20px;
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            margin-bottom: 40px;
-        }
-
-        #services h2 {
-            font-size: 2.5em;
-            margin-bottom: 40px;
-            text-align: center;
-            color: #fff;
-        }
-
-        .services-container {
-            display: flex;
-            justify-content: space-around;
-            align-items: stretch;
-            flex-wrap: wrap;
-        }
-
-        .service-card {
-            background: linear-gradient(to right, #26567b, #0b1e34);
-            border-radius: 10px;
-            padding: 40px 20px;
-            margin: 20px;
-            text-align: center;
-            transition: transform 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            flex: 0 0 calc(30% - 40px);
-            max-width: calc(30% - 40px);
-        }
-
-        .service-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .service-card h3 {
-            color: #007BFF;
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-
-        .service-card p {
-            color: #ddd;
-            font-size: 1.1em;
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-
-        #testimonials {
-            padding: 80px 0;
-            position: relative;
-            z-index: 1;
-        }
-
-        #testimonials h2 {
-            font-size: 2.5em;
-            margin-bottom: 40px;
-            text-align: center;
-            color: #fff;
-        }
-
-        .testimonial {
-            margin-bottom: 40px;
-            background: linear-gradient(to right, #1f364d, #304e6d);
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .testimonial:hover {
-            transform: translateY(-10px);
-        }
-
-        .testimonial h3 {
-            color: #007BFF;
-            font-size: 1.8em;
-            margin-bottom: 15px;
-        }
-
-        .testimonial p {
-            color: #ddd;
-            font-size: 1.1em;
-            line-height: 1.6;
-            margin-bottom: 15px;
-        }
-
-        #connect {
-            padding: 80px 0;
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            background: linear-gradient(to right, #1f364d, #304e6d);
-            border-radius: 20px;
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            margin-bottom: 40px;
-        }
-
-        #connect h2 {
-            font-size: 2.5em;
-            margin-bottom: 40px;
-            text-align: center;
-            color: #fff;
-        }
-
-        .social-buttons {
-            margin-top: 20px;
-        }
-
-        .social-buttons a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            padding: 15px 30px;
-            border-radius: 30px;
-            background-color: #7289da;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            display: inline-block;
-        }
-
-        .social-buttons a:hover {
-            background-color: #677bc4;
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-
+    
         footer {
-            background: linear-gradient(to right, #0b1e34, #1f364d);
+            background-color: #161616;
             color: #fff;
-            padding: 40px 0;
             text-align: center;
-            position: relative;
-            z-index: 1;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
 
-        .footer-links {
-            margin-top: 20px;
-        }
-
-        .footer-links a {
+        footer a {
             color: #fff;
             text-decoration: none;
-            margin: 0 10px;
-            transition: color 0.3s ease;
+            font-weight: bold;
         }
 
-        .footer-links a:hover {
-            color: #ccc;
+        footer a:hover {
+            color: #00aaff;
         }
-
-        .social-icons a {
-            color: #fff;
-            font-size: 1.5em;
-            margin: 0 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .social-icons a:hover {
-            transform: translateY(-3px);
-        }
-
-        .purchase-button {
-            display: inline-block;
-            background-color: #007BFF;
-            color: #fff;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 30px;
-            font-size: 1.1em;
-            text-decoration: none;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            margin-top: 20px;
-            cursor: pointer;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .purchase-button i {
-            margin-right: 5px;
-        }
-
-        .purchase-button:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-
-        .sticky header {
-            background-color: #222;
-            padding: 20px 0;
-        }
-
-        @media screen and (max-width: 1200px) {
-            .service-card {
-                flex: 0 0 calc(33.33% - 40px);
-                max-width: calc(33.33% - 40px);
-            }
-        }
-
-        @media screen and (max-width: 768px) {
-            .service-card {
-                flex: 0 0 calc(50% - 40px);
-                max-width: calc(50% - 40px);
-            }
-
-            header h1 {
-                font-size: 2.5em;
-            }
-
-            header p {
-                font-size: 1em;
-            }
-        }
-
-        .logo {
-            display: inline-block;
-            margin-right: 20px;
-        }
-
-        .logo img {
-            width: 180px;
-            height: auto;
-        }
-
-        .faq-panel {
-            background: linear-gradient(to right, #26567b, #0b1e34);
-            border-radius: 10px;
-            padding: 40px 20px;
-            margin: 20px;
-            text-align: center;
-            transition: transform 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            flex: 0 0 calc(100% - 40px);
-            max-width: calc(100% - 40px);
-        }
-
-        .faq-panel:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .faq-panel h3 {
-            color: #007BFF;
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-
-        .faq-panel p {
-            color: #ddd;
-            font-size: 1.1em;
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-
     </style>
 </head>
-
 <body>
     <nav>
-        <div class="container">
-            <a href="#home"><i class="fas fa-home"></i> Home</a>
-            <a href="#services"><i class="fas fa-cogs"></i> Features</a>
-            <a href="apply.html"><i class="fas fa-shopping-cart"></i> Buy Now</a>
-            <a href="#contact"><i class="fas fa-envelope"></i> Contact Us</a>
-            <a href="#login" class="login-button" onclick="loginClicked()"><i class="fas fa-sign-in-alt"></i> Login</a>
-        </div>
+        <div class="logo">Oblivity</div>
+        <ul>
+            <li><a href="https://oblivity.wtf/dashboard/login.php" class="login-button"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        </ul>
     </nav>
-
-    <header>
-        <div class="container">
+    <div class="header">
+        <div>
             <h1>Oblivity External</h1>
             <p>Taking Roblox externals to the next level</p>
-            <button class="purchase-button" onclick="redirectToPurchasePage()"><i class="fas fa-shopping-cart"></i> Purchase Now</button>
-        </div>
-    </header>
-
-    <section id="services">
-        <div class="container">
-            <h2>Why Choose Oblivity?</h2>
-            <div class="services-container">
-                <div class="service-card">
-                    <i class="fas fa-lock fa-3x"></i>
-                    <h3>Security</h3>
-                    <p>Our advanced security features minimize the risk of detection and bans.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-chart-line fa-3x"></i>
-                    <h3>Optimized Performance</h3>
-                    <p>Enjoy smooth gameplay without sacrificing performance.</p>
-                </div>
-                <div class="service-card">
-                    <i class="fas fa-code fa-3x"></i>
-                    <h3>Scripting API</h3>
-                    <p>We have a scripting system where users can create their own modules.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="testimonials">
-        <div class="container">
-            <h2>Frequently Asked Questions</h2>
-            <div class="services-container">
-                <div class="faq-panel">
-                    <h3>How much does Oblivity cost?</h3>
-                    <p>Oblivity costs $19.99 for a lifetime.</p>
-                </div>
-                <div class="faq-panel">
-                    <h3>What is Oblivity?</h3>
-                    <p>Oblivity is a Roblox external application designed to enhance your gaming experience.</p>
-                </div>
-                <div class="faq-panel">
-                    <h3>What games does Oblivity support?</h3>
-                    <p>Oblivity supports all Roblox games, although compatibility may vary.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="connect">
-        <div class="container">
-            <h2>Connect With Us</h2>
-            <div class="social-buttons">
-                <a href="https://discord.gg/mEb2C8ZNAZ"><i class="fab fa-discord"></i> Join Discord</a>
+            <div class="buttons">
+                <a href="https://oblivity.wtf/apply.html"><i class="fas fa-shopping-cart"></i> Purchase</a>
+                <a href="https://discord.gg/mEb2C8ZNAZ"><i class="fab fa-discord"></i> Discord</a>
                 <a href="https://t.me/oblivityupdates"><i class="fab fa-telegram"></i> Telegram</a>
             </div>
         </div>
-    </section>
+    </div>
 
     <footer>
-        <div class="container">
-            <div class="footer-links">
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="tos.html">Terms of Service</a>
-            </div>
-            <div class="social-icons">
-                <a href="https://twitter.com/Oblivitysoft"><i class="fab fa-twitter"></i></a>
-                <a href="mailto:contact@oblivity.xyz"><i class="fas fa-envelope"></i></a>
-            </div>
-            <p>&copy; 2022 - 2024 Yeezy LLC. All rights reserved.</p>
-        </div>
+        <p>Oblivity is a <a href="https://gavinstrikes.wtf" target="_blank">gavinstrikes.wtf</a> product</p>
+        <p>&copy; Oblivity Software LLC 2022 - 2024. All rights reserved.</p>
+
     </footer>
 
-    <script>
-        function redirectToPurchasePage() {
-            window.location.href = "apply.html";
-        }
-
-        function loginClicked() {
-            alert("Not implemented");
-        }
-
-        window.addEventListener('scroll', function () {
-            const header = document.querySelector('header');
-            if (window.scrollY > 0) {
-                header.classList.add('blurred');
-            } else {
-                header.classList.remove('blurred');
-            }
-        });
-    </script>
 </body>
-
 </html>
